Changing package name

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "typescript": "^4.0.5"
   },
   "scripts": {
-    "publish": "lerna run tsc && lerna publish"
+    "pub": "lerna run tsc && lerna publish"
   },
   "version": "1.0.1"
 }
