--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@osequi/test-lerna/theme",
+  "name": "@osequi/test-lerna-theme",
   "version": "1.0.1",
   "description": "A theme",
   "author": "osequi <cs@osequi.com>",
