--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@osequi/test-lerna-theme",
-  "version": "1.0.3",
-  "description": "A theme",
+  "name": "@osequi/test-lerna-typography",
+  "version": "1.0.0",
+  "description": "> TODO: description",
   "author": "osequi <cs@osequi.com>",
   "homepage": "https://github.com/osequi/test-lerna#readme",
   "license": "ISC",
-  "main": "lib/theme.js",
+  "main": "lib/typography.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -23,7 +23,5 @@
   },
   "bugs": {
     "url": "https://github.com/osequi/test-lerna/issues"
-  },
-  "gitHead": "542b9db10c214e924053ab440abf8732011259d2",
-  "dependencies": {}
+  }
 }
