--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "ts-jest": "^26.4.3",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
   },
   "scripts": {
